--- a/src/ru/teosa/GUI/view/ECTab.fxml
+++ b/src/ru/teosa/GUI/view/ECTab.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.ECTabController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.ECTabController">
    <children>
       <GridPane layoutX="28.0" layoutY="26.0" prefWidth="600.0" vgap="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -28,6 +29,7 @@
             <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="30.0" prefHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -151,7 +153,7 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Продление постоя" underline="true" GridPane.rowIndex="8">
+            <Label text="Продление постоя" underline="true" GridPane.rowIndex="9">
                <font>
                   <Font size="14.0" />
                </font>
@@ -159,34 +161,58 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Оставшиеся дни" GridPane.rowIndex="9">
+            <Label text="Оставшиеся дни" GridPane.rowIndex="10">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Длительность продления" GridPane.rowIndex="10">
+            <Label text="Длительность продления" GridPane.rowIndex="11">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ComboBox fx:id="extendTerm" minWidth="80.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-            <Spinner fx:id="daysBeforeExtend" minWidth="80.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-            <Label text="Продлевать только в своем КСК" GridPane.rowIndex="11">
+            <ComboBox fx:id="extendTerm" minWidth="80.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+            <Spinner fx:id="daysBeforeExtend" minWidth="80.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <Label text="Продлевать только в своем КСК" GridPane.rowIndex="12">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <CheckBox fx:id="onlyOwnerExtend" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+            <CheckBox fx:id="onlyOwnerExtend" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="12" />
             <Label fx:id="registrationTermLabel" text="дней" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="90.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="extendTermLabel" text="дней" GridPane.columnIndex="1" GridPane.rowIndex="10">
+            <Label fx:id="extendTermLabel" text="дней" GridPane.columnIndex="1" GridPane.rowIndex="11">
                <GridPane.margin>
                   <Insets left="90.0" />
                </GridPane.margin>
             </Label>
+            <Label text="Максимальный тариф" GridPane.rowIndex="7">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <ComboBox fx:id="maxTariffCombo" prefHeight="25.0" prefWidth="65.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="/ день" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets left="70.0" />
+               </GridPane.margin>
+            </Label>
+            <Label prefHeight="17.0" prefWidth="269.0" text="Макс. плата за постой" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <GridPane.margin>
+                  <Insets left="145.0" right="130.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="maxPayEntry" editable="false" style="-fx-background-color: #D3D3D3;" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets left="275.0" right="40.0" />
+               </GridPane.margin>
+            </TextField>
          </children>
       </GridPane>
    </children>
