--- a/src/ru/teosa/GUI/view/HerdRunProgressWindow.fxml
+++ b/src/ru/teosa/GUI/view/HerdRunProgressWindow.fxml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="460.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.HerdRunProgressWindowController">
-   <bottom>
-      <ButtonBar buttonOrder="%key.unspecified" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <buttons>
-          <Button fx:id="startRun" mnemonicParsing="false" onAction="#startRunHandler" />
-        </buttons>
-      </ButtonBar>
-   </bottom>
+<BorderPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="460.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.HerdRunProgressWindowController">
    <center>
-      <TextFlow maxHeight="-Infinity" minHeight="200.0" prefHeight="300.0" styleClass="background" stylesheets="@NewFile.css" BorderPane.alignment="CENTER" />
+      <TextFlow maxHeight="-Infinity" minHeight="200.0" prefHeight="300.0" styleClass="background" BorderPane.alignment="CENTER" />
    </center>
    <top>
       <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="115.0" BorderPane.alignment="CENTER">
@@ -34,4 +27,13 @@
          </children>
       </AnchorPane>
    </top>
+   <bottom>
+      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <items>
+            <Button fx:id="stopRun" mnemonicParsing="false" onAction="#stopRunHandler" text="Стоп" />
+            <Button fx:id="pauseRun" mnemonicParsing="false" onAction="#pauseRunHandler" text="Пауза" />
+          <Button fx:id="startRun" mnemonicParsing="false" onAction="#startRunHandler" text="Начать/продолжить" />
+         </items>
+      </ToolBar>
+   </bottom>
 </BorderPane>
